<resources>
    <string name="app_name" translatable="false">Shark DMS</string>
    <string name="fragment_splash_text_view_app_name_text" translatable="false">SHARK DMS</string>
    <string name="fragment_login_text_view_1_text">Đăng Nhập</string>
    <string name="fragment_login_text_view_2_text">Dành Cho Nhân Viên Thị Trường Và Đại Lý</string>
    <string name="fragment_login_edit_text_username_hint">Tài Khoản</string>
    <string name="fragment_login_edit_text_password_hint">Mật Khẩu</string>
    <string name="fragment_login_text_view_forgot_password_text">Quên Mật Khẩu?</string>
    <string name="fragment_login_button_login_text">Đăng Nhập</string>
    <string name="fragment_customer_header_text">Khách Hàng</string>
    <string name="fragment_add_customer_header_text">Thêm Khách Hàng</string>
    <string name="fragment_search_customer_by_name_phone_number">Tên hoặc SĐT khách hàng</string>
    <string name="fragment_customer_rank_all">Tất cả</string>
    <string name="fragment_customer_rank">Xếp loại:</string>
    <string name="fragment_customer_rank_a">Xếp loại: A</string>
    <string name="fragment_customer_rank_b">Xếp loại: B</string>
    <string name="fragment_customer_rank_c">Xếp loại: C</string>
    <string name="fragment_customer_rank_d">Xếp loại: D</string>
    <string name="fragment_customer_name_sample">Khách Hàng</string>
    <string name="fragment_customer_phone_number_sample">0312345678</string>
    <string name="fragment_customer_address">Địa chỉ:</string>
    <string name="fragment_customer_address_sample">Địa chỉ: Mai Đình, Hiệp Hoà, Bắc Giang</string>
    <string name="fragment_customer_check_in">Ngày check-in:</string>
    <string name="fragment_customer_check_in_sample">Ngày check-in: 19/03/2021</string>
    <string name="fragment_no_customer_display">Hãy thêm mới khách hàng!</string>
    <string name="fragment_create_customer_header_text">Thêm Khách Hàng</string>
    <string name="fragment_create_customer_add_avatar_text">Thêm ảnh đại diện</string>
    <string name="fragment_create_customer_add_customer_info_text">THÔNG TIN KHÁCH HÀNG</string>
    <string name="fragment_create_customer_account_description">Tài khoản dành cho khách hàng đăng nhập vào ứng dụng</string>
    <string name="fragment_create_customer_name">Tên khách hàng: <font color='#FF0000'>*</font></string>
    <string name="fragment_create_customer_name_error">Tên khách hàng không được chứa số, kí tự đặc biệt và không quá 50 ký tự</string>
    <string name="fragment_create_customer_account">Tài khoản đăng nhập: <font color='#FF0000'>*</font></string>
    <string name="fragment_create_customer_password">Mật khẩu: <font color='#FF0000'>*</font></string>
    <string name="fragment_create_customer_phone">Số điện thoai: <font color='#FF0000'>*</font></string>
    <string name="fragment_create_customer_phone_error">Số điện thoai phải là 10 hoặc 11 số</string>
    <string name="fragment_create_customer_email">Email (không bắt buộc):</string>
    <string name="fragment_create_customer_email_error">Format email chưa đúng</string>
    <string name="fragment_create_customer_address">Địa chỉ: <font color='#FF0000'>*</font></string>
    <string name="fragment_create_customer_address_error">Địa chỉ không được để trống</string>
    <string name="fragment_create_customer_account_note">Tài khoản đăng nhập viết liền không dấu, chỉ bao gồm chữ cái, chữ số </string>
    <string name="fragment_create_customer_password_note">Mật khẩu phải dài hơn 6 ký tự</string>
    <string name="fragment_create_customer_gps_button">Lấy tọa độ địa điểm</string>
    <string name="fragment_create_customer_create_button">TẠO KHÁCH HÀNG</string>
    <string name="fragment_create_customer_cancel_button">HỦY</string>
    <string name="fragment_create_customer_take_picture">Chụp ảnh</string>
    <string name="fragment_create_customer_choose_library">Cuộn Camera</string>
    <string name="fragment_customer_info_title">Thông Tin Khách Hàng</string>
    <string name="fragment_customer_info_map">Xem bản đồ</string>
    <string name="fragment_customer_info_check_in">Check-in vị trí hiện tại</string>
    <string name="fragment_customer_info_camera">Chụp ảnh trưng bày</string>
    <string name="fragment_customer_info_discount">Bảng giá chiết khấu cho khách hàng</string>
    <string name="fragment_customer_info_order">Đặt hàng</string>
    <string name="fragment_customer_discount_title">Bảng chiết khấu (Khách hàng)</string>
    <string name="fragment_customer_discount_short">STDH: Số tiền đơn hàng</string>
    <string name="fragment_customer_discount_threshold">Ngưỡng</string>
    <string name="fragment_customer_discount_percent">Giảm (%)</string>
    <string name="fragment_customer_discount_threshold_min">1.000.000 &lt; STDH</string>
    <string name="fragment_customer_discount_percent_min">1%</string>
    <string name="fragment_customer_discount_threshold_min_max">2.000.000 &lt;&#61; STDH &lt;&#61; 5.000.000</string>
    <string name="fragment_customer_discount_percent_min_max">2%</string>
    <string name="fragment_customer_discount_threshold_max">30.000.000 &lt; STDH</string>
    <string name="fragment_customer_discount_percent_max">10%</string>
    <string name="fragment_customer_discount_none_message">Chưa có bảng giá chiết khấu!</string>
    <string name="fragment_customer_gallery_title">Phòng trưng bày</string>
    <string name="fragment_customer_gallery_instruct">Chọn ảnh trưng bày (Tối đa 30 ảnh)</string>
    <string name="fragment_customer_gallery_upload">TẢI LÊN</string>
    <string name="fragment_map_header">Bản Đồ</string>
    <string name="fragment_customer_gallery_upload_dialog_title">Thông báo</string>
    <string name="fragment_customer_gallery_upload_dialog_descrip">Tải ảnh thành công!</string>
    <string name="fragment_forgot_password_text_view_1_text">Xác nhận tài khoản</string>
    <string name="fragment_forgot_password_text_view_2_text">Bạn Hãy Nhập Tài Khoản Đã Đăng Ký\nTrên Shark DMS</string>
    <string name="fragment_forgot_password_edit_text_username_hint">Tài Khoản</string>
    <string name="fragment_forgot_password_button_send_text">Gửi</string>
    <string name="fragment_account_title">Thông tin thành viên</string>
    <string name="fragment_account_text_view_username_text">Tên đăng nhập:</string>
    <string name="fragment_account_text_view_email_text">Email:</string>
    <string name="fragment_account_text_view_company_text">Công ty:</string>
    <string name="fragment_account_text_view_position_text">Vị trí:</string>
    <string name="fragment_account_text_view_discount_text">Bảng giá chiết khấu cho nhân viên</string>
    <string name="fragment_customer_account_text_view_discount_text">Bảng giá chiết khấu cho khách hàng</string>
    <string name="fragment_account_text_view_change_password_text">Đổi mật khẩu</string>
    <string name="fragment_account_text_view_log_out_text">Đăng xuất</string>
    <string name="fragment_change_password_title">Đổi mật khẩu</string>
    <string name="fragment_change_password_edit_text_old_password_hint">Nhập Mật Khẩu Cũ</string>
    <string name="fragment_change_password_text_view_old_password_error">Mật khẩu cũ phải chứa ít nhất 6 ký tự</string>
    <string name="fragment_change_password_edit_text_new_password_hint">Nhập Mật Khẩu Mới</string>
    <string name="fragment_change_password_text_view_new_password_error">Mật khẩu mới phải khác mật khẩu cũ và chứa ít nhất 6 ký tự</string>
    <string name="fragment_change_password_edit_text_confirm_password_hint">Nhập Lại Mật Khẩu</string>
    <string name="fragment_change_password_text_view_confirm_password_error">Mật khẩu xác thực phải giống mật khẩu mới</string>
    <string name="fragment_change_password_text_view_forgot_password_text">Quên Mật Khẩu?</string>
    <string name="fragment_change_password_button_confirm_text">Xong</string>
    <string name="fragment_overview_title">Tổng quan</string>
    <string name="fragment_overview_text_view_total_amount_title_text">Tổng doanh thu 3 tháng gần đây:</string>
    <string name="fragment_overview_title_y">Doanh thu (VNĐ)</string>
    <string name="fragment_overview_format_tooltip_y">{%Value}{groupsSeparator: } VNĐ</string>
    <string name="fragment_overview_format_x">Tháng %1$d, %2$d</string>
    <string name="fragment_overview_format_y">{%Value}{groupsSeparator: }</string>
    <string name="fragment_overview_format_total_revenue">%1$s VNĐ</string>
    <string name="fragment_overview_format_welcome">Xin chào, %1$s</string>
    <string name="fragment_notifications_title">Thông báo</string>
    <string name="fragment_notifications_text_view_no_notification_text">Bạn hiện không có thông báo nào</string>
    <string name="fragment_notification_details_title">Chi tiết thông báo</string>
    <string name="fragment_customers_title">Khách hàng</string>
    <string name="fragment_history_title">Lịch sử</string>
    <string name="fragment_report_title">Báo cáo</string>
    <string name="fragment_report_edit_text_title_hint">Tiêu đề</string>
    <string name="fragment_report_edit_text_description_hint">Nhập chi tiết báo cáo…</string>
    <string name="fragment_report_button_send_text">Gửi</string>
    <string name="fragment_report_message_confirm">Xác nhận gửi báo cáo?</string>
    <string name="fragment_tasks_title">Công việc</string>
    <string name="fragment_tasks_text_view_date_default_text">Chọn ngày</string>
    <string name="fragment_tasks_text_view_no_task_text">Bạn hiện không có công việc nào</string>
    <string name="fragment_tasks_date_format_display">%1$d/%2$d/%3$d</string>
    <string name="fragment_tasks_date_format_search">%1$d-%2$d-%3$d</string>
    <string name="fragment_task_details_title">Chi tiết công việc</string>
    <string name="task_status_new">Mới</string>
    <string name="task_status_processing">Đang xử lý</string>
    <string name="task_status_checking">Đợi kiểm tra</string>
    <string name="task_status_completed">Hoàn thành</string>
    <string name="task_status_not_completed">Không hoàn thành</string>
    <string name="fragment_policy_title">Chính sách</string>
    <string name="fragment_introduction_title">Hướng dẫn sử dụng</string>
    <string name="fragment_order_detail_title">Chi tiết đơn hàng</string>
    <string name="fragment_order_detail_list">Chi tiết đơn hàng:</string>
    <string name="fragment_order_detail_num">2 sản phẩm</string>
    <string name="fragment_order_detail_total">Thanh toán:</string>
    <string name="fragment_order_detail_customer_title">Khách hàng:</string>
    <string name="fragment_order_detail_discount">Chiết khấu:</string>
    <string name="fragment_order_detail_discount_sample">600.000 VNĐ</string>
    <string name="fragment_order_detail_total_amount">Tổng tiền:</string>
    <string name="fragment_order_detail_total_amount_sample">5.400.000 VNĐ</string>
    <string name="fragment_order_detail_note">Ghi chú:</string>
    <string name="fragment_order_status">Trạng thái đơn hàng:</string>
    <string name="dialog_offline_text_view_title_text">Đang ở chế độ Offline</string>
    <string name="dialog_offline_text_view_content_text">Hãy kết nối mạng của bạn để tiếp tục trải nghiệm</string>
    <string name="support_call">039 666 8760</string>
    <string name="support_email">hotro@sharkdms.vn</string>
    <string name="logout">Đăng xuất</string>
    <string name="content_description" translatable="false">none</string>
</resources>