<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group
        android:id="@+id/group_1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/overviewFragment"
            android:icon="@drawable/ic_overview"
            android:title="@string/fragment_overview_title" />
        <item
            android:id="@+id/customerListFragment"
            android:icon="@drawable/ic_customers"
            android:title="@string/fragment_customers_title" />
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_history"
            android:title="@string/fragment_history_title" />
        <item
            android:id="@+id/reportFragment"
            android:icon="@drawable/ic_report"
            android:title="@string/fragment_report_title" />
        <item
            android:id="@+id/tasksFragment"
            android:icon="@drawable/ic_tasks"
            android:title="@string/fragment_tasks_title" />
        <item
            android:id="@+id/nav_policy"
            android:icon="@drawable/ic_policy"
            android:title="@string/fragment_policy_title" />
        <item
            android:id="@+id/nav_introduction"
            android:icon="@drawable/ic_introduction"
            android:title="@string/fragment_introduction_title" />
    </group>
    <group android:id="@+id/group_2">
        <item
            android:icon="@drawable/ic_call"
            android:title="@string/support_call" />
        <item
            android:icon="@drawable/ic_email"
            android:title="@string/support_email" />
        <item
            android:id="@+id/logoutDialogFragment"
            android:icon="@drawable/ic_logout"
            android:title="@string/logout" />
    </group>
</menu>