<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingStart="15dp"
    android:paddingEnd="15dp"
    android:paddingBottom="40dp"
    android:background="@drawable/bg_item_holder">

    <TextView
        android:id="@+id/tv_customer_discount_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/fragment_customer_discount_title"
        android:textSize="16dp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_customer_discount_short"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/fragment_customer_discount_short"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_customer_discount_title" />

    <TableLayout
        android:id="@+id/table_discount"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="@+id/tv_customer_discount_title"
        app:layout_constraintStart_toStartOf="@+id/tv_customer_discount_title"
        app:layout_constraintTop_toBottomOf="@+id/tv_customer_discount_short">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_customer_discount_threshold"
                android:layout_width="190dp"
                android:layout_height="wrap_content"
                android:paddingTop="6dp"
                android:paddingBottom="6dp"
                android:text="@string/fragment_customer_discount_threshold"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:background="@drawable/border"/>

            <TextView
                android:id="@+id/tv_customer_discount_percent"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:paddingTop="6dp"
                android:paddingBottom="6dp"
                android:text="@string/fragment_customer_discount_percent"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:background="@drawable/border"/>
        </TableRow>
        <TableRow
            android:id="@+id/row_min"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone">

            <TextView
                android:id="@+id/tv_customer_discount_threshold_min"
                android:layout_width="190dp"
                android:layout_height="wrap_content"
                android:paddingTop="6dp"
                android:paddingBottom="6dp"
                android:text="@string/fragment_customer_discount_threshold_min"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:background="@drawable/border"/>

            <TextView
                android:id="@+id/tv_customer_discount_percent_min"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:paddingTop="6dp"
                android:paddingBottom="6dp"
                android:text="@string/fragment_customer_discount_percent_min"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:background="@drawable/border"/>
        </TableRow>
        <TableRow
            android:id="@+id/row_min_max"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone">

            <TextView
                android:id="@+id/tv_customer_discount_threshold_min_max"
                android:layout_width="190dp"
                android:layout_height="wrap_content"
                android:paddingTop="6dp"
                android:paddingBottom="6dp"
                android:text="@string/fragment_customer_discount_threshold_min_max"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:background="@drawable/border"/>

            <TextView
                android:id="@+id/tv_customer_discount_percent_min_max"
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:background="@drawable/border"
                android:paddingTop="6dp"
                android:paddingBottom="6dp"
                android:text="@string/fragment_customer_discount_percent_min_max"
                android:textAlignment="center"
                android:gravity="center"
                android:textColor="@color/black" />
        </TableRow>
        <TableRow
            android:id="@+id/row_max"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone">

            <TextView
                android:id="@+id/tv_customer_discount_threshold_max"
                android:layout_width="190dp"
                android:layout_height="wrap_content"
                android:paddingTop="6dp"
                android:paddingBottom="6dp"
                android:text="@string/fragment_customer_discount_threshold_max"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:background="@drawable/border"/>

            <TextView
                android:id="@+id/tv_customer_discount_percent_max"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:paddingTop="6dp"
                android:paddingBottom="6dp"
                android:text="@string/fragment_customer_discount_percent_max"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:background="@drawable/border"/>
        </TableRow>
    </TableLayout>

    <ImageView
        android:id="@+id/iv_close"
        android:layout_width="12dp"
        android:layout_height="12dp"
        android:layout_marginTop="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/btn_x" />

    <TextView
        android:id="@+id/tv_customer_discount_none_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/fragment_customer_discount_none_message"
        android:textColor="@color/black"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/table_discount" />
</androidx.constraintlayout.widget.ConstraintLayout>