<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#e5e5e5"
    tools:context=".ui.base.history.info.BaseOrderDetailFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_tab_header"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/iv_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:contentDescription="@string/content_description"
                app:srcCompat="@drawable/ic_back" />

            <TextView
                android:id="@+id/tv_header_customer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/fragment_order_detail_title"
                android:textColor="@color/white"
                android:textSize="18sp"
                tools:ignore="RelativeOverlap" />
        </RelativeLayout>
    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_header">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            android:stretchColumns="0,1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar_header">

            <TextView
                android:id="@+id/tv_customer_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="10dp"
                android:textColor="@color/black"
                android:text="@string/fragment_order_detail_customer_title" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:background="@color/white">
                <TextView
                    android:id="@+id/tv_customer_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/fragment_customers_title"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/tv_customer_phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_alignParentEnd="true"
                    android:gravity="end"
                    android:text="@string/fragment_customer_phone_number_sample"
                    android:textColor="@color/black" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:paddingBottom="10dp">
                <TextView
                    android:id="@+id/tv_customer_order_detail_list"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/fragment_order_detail_list"
                    android:textColor="@color/black"/>

                <TextView
                    android:id="@+id/tv_customer_order_detail_num"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="16dp"
                    android:layout_toEndOf="@id/tv_customer_order_detail_list"
                    android:text="@string/fragment_order_detail_num"
                    android:textColor="@color/black"
                    android:textStyle="bold" />
            </RelativeLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_product_item"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                tools:listitem="@layout/item_order_product"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:paddingBottom="10dp">
                <TextView
                    android:id="@+id/tv_customer_order_detail_total"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/fragment_order_detail_total"
                    android:textColor="@color/black"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:background="@color/white">
                <TextView
                    android:id="@+id/tv_order_discount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/fragment_order_detail_discount"
                    android:textColor="@color/black"/>

                <TextView
                    android:id="@+id/tv_order_discount_sample"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_alignParentEnd="true"
                    android:gravity="end"
                    android:text="@string/fragment_order_detail_discount_sample"
                    android:textColor="@color/black" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:background="@color/white">
                <TextView
                    android:id="@+id/tv_order_total_amount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/fragment_order_detail_total_amount"
                    android:textColor="@color/black"/>

                <TextView
                    android:id="@+id/tv_order_total_amount_sample"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_alignParentEnd="true"
                    android:gravity="end"
                    android:text="@string/fragment_order_detail_total_amount_sample"
                    android:textColor="@color/black"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:background="@color/white">
                <TextView
                    android:id="@+id/tv_order_note"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/fragment_order_detail_note"
                    android:textColor="@color/black"/>

                <TextView
                    android:id="@+id/tv_order_note_input"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="16dp"
                    android:gravity="end"
                    android:textColor="@color/black" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:paddingBottom="10dp">
                <TextView
                    android:id="@+id/tv_customer_order_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/fragment_order_status"
                    android:textColor="@color/black" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:layout_marginBottom="45dp"
                android:background="@color/white">
                <TextView
                    android:id="@+id/tv_customer_order_status_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:drawablePadding="20dp"
                    android:text="Đơn mới"
                    android:textColor="@color/black"
                    app:drawableStartCompat="@drawable/ic_order_status_new" />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>